--- a/layouts/header/Header.module.css
+++ b/layouts/header/Header.module.css
@@ -115,6 +115,20 @@
   color: var(--color-black);
 }
 
+.navMobile__exit {
+  display: flex;
+  gap: 12px;
+  height: 21px;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  line-height: 26px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 .navMobile__btns {
   display: flex;
   gap: 16px;
@@ -170,6 +184,10 @@
   .mobileHeaderRight {
     display: flex;
     gap: 16px;
+  }
+
+  .exitBtn {
+    display: none;
   }
 }
 
